Baseline sync from ardas stage
