# src/swagger/v1/index.json
@@ -156,11 +156,11 @@
       "get": {
         "summary": "Get maximum and average waiting and call durations",
         "produces": ["application/json"],
-        "tags": ["DashboardDurations"],
+        "tags": ["Dashboard"],
         "parameters": [
           {
             "name": "tenantId",
-            "description": "Operator Id",
+            "description": "Tenant Id to get filtered by",
             "required": false,
             "type": "string"
           },
@@ -194,6 +194,50 @@
             "description": "success",
             "schema": {
               "$ref": "#/definitions/DashboardDurations"
+            }
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal server error"
+          }
+        }
+      }
+    },
+    "/api/video/dashboard/callbacks": {
+      "get": {
+        "summary": "Get total, answered and missed callbacks counts",
+        "produces": ["application/json"],
+        "tags": ["Dashboard"],
+        "parameters": [
+          {
+            "name": "tenantId",
+            "description": "Tenant Id to get filtered by",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "from",
+            "description": "Date and time to start from",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "to",
+            "description": "Date and time to finish at",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success",
+            "schema": {
+              "$ref": "#/definitions/DashboardCallbacks"
             }
           },
           "401": {
@@ -420,6 +464,15 @@
         "maxWaitingDuration": { "type": "number" },
         "averageWaitingDuration": { "type": "number" },
         "totalWaitingDuration": { "type": "number" }
+      }
+    },
+    "DashboardCallbacks": {
+      "type": "object",
+      "required": ["total", "answered", "missed"],
+      "properties": {
+        "total": { "type": "number" },
+        "answered": { "type": "number" },
+        "missed": { "type": "number" }
       }
     }
   }
